# madlib-cli

./: README.md  pyproject.toml
assets/: story.txt  template.txt
madlib_cli/: madlib.py
